# seppolang

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: CNAME  index.html  roadmap.html
examples/: chibi.seppo  hello.seppo
src/: codegen.rs  lib.rs  main.rs  parser.rs  seppo.pest  types.rs
tests/: integration.rs
