[package]
name = "seppolang"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = {version="0.5.0", features = ["llvm18-0"]}
pest = "2.7"
pest_derive = "2.7"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.5"

[build-dependencies]
pest_generator = "2.7"

[lib]
name = "seppolang"
path = "src/lib.rs"

[[bin]]
name = "seppoc"
path = "src/main.rs" 